# seing

./: .gitignore  CMakeLists.txt  README.md  setup.py
doc/: Makefile  make.bat
doc/source/: conf-back.py  conf.py  documentation.rst  extend.rst  (+5 more)
pyseing/: __init__.py  fp_calc.py
pyseing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: Doxyfile  README.txt~  agnicalculator.cpp  agnicalculator.h  atom.cpp  atom.h  atomicsystem.cpp  atomicsystem.cpp~  atomicsystem.h  atomicsystem.h~  bispectrumcalculator.cpp  bispectrumcalculator.cpp~  bispectrumcalculator.h  calculator.cpp~  calculator.h~  diamondcalculator.cpp  diamondcalculator.cpp~  diamondcalculator.h  diamondcalculator.h~  fingerprint.cpp~  fingerprint.h~  fingerprintgenerator.cpp  fingerprintgenerator.cpp~  fingerprintgenerator.h  fingerprintgenerator.h~  gaussiancalculator.cpp  gaussiancalculator.cpp~  gaussiancalculator.h  gaussiancalculator.h~  genericlocalcalculator.cpp  genericlocalcalculator.cpp~  genericlocalcalculator.h  genericlocalcalculator.h~  inputs.cpp  inputs.cpp~  inputs.h  inputs.h~  main.cpp  main.cpp~  makefile  (+17 more)
test/: 1.xyz  filename  mytest.out  mytest101917.out  mytest1222.out  mytest3.out  out111017.out  propfile.in  propfilebispectrum3.in  propfilediamond.in  propfilegaussian0.in  propfilegaussian1.in  propfilegaussian1_0.in  propfilegaussian1_1.in  propfilegaussian1_2.in  propfilegaussian1_3.in  propfilegaussian2.in  propfilezernike3.in  scf.in  scf.out  seing.py  test.out  test.py  test.xyz  test1013.out  test1221.out  test2.out  test2.xyz  testout.out  testout103017.out
(+193 files in other folders)
